--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.9.1
+          python-version: 3.9
+          architecture: "x64"
       - name: Caching
         uses: actions/cache@v2
         with:
